# opensqray

./: .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: openslide-compatibility.md  performance-plan.md  roadmap.md  sdk-runtime-packaging.md  sdk-runtime-validation.md  sdpc-format-notes.md
docs/validation-results/: README.md
examples/: opensqray_tutorial.ipynb
packaging/opensqray_sdk_runtime_template/: README.md
src/opensqray/: __init__.py  batch.py  cli.py  compat.py  deepzoom.py  image_adapter.py  index_research.py  openslide_adapter.py  runtime_package.py  sdk_backend.py  sdk_validation.py  sdpc.py  slide.py
tests/: synthetic_sdpc.py  test_batch.py  test_compat.py  test_deepzoom.py  test_image_adapter.py  test_index_research.py  test_runtime_package.py  test_sdk_backend.py  test_sdk_validation.py  test_sdpc.py  test_slide.py
tools/: benchmark_patch_reads.py  build_sdk_runtime_wheel.py  check_sdk_runtime_package.py  stage_sdk_runtime_package.py  validate_local_samples.py  validate_sdk_runtime.py
