[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opensqray"
version = "0.1.2"
description = "Public whole-slide image utilities with native SDPC metadata parsing and optional OpenSlide support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SuooL" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = []

[project.optional-dependencies]
image = ["Pillow>=10.0.0"]
openslide = ["openslide-python>=1.3.1"]

[project.scripts]
opensqray = "opensqray.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
